[workspace]
members = [
  "libraries/math",
  "token-swap/program",
  "token-swap/program/fuzz",
  "token/program",
]
exclude = [
  "themis/client_ristretto",
  "themis/program_ristretto",
  "token/perf-monitor",       # TODO: Rework perf-monitor to use solana-program-test, avoiding the need to link directly with the BPF VM
]

[profile.dev]
split-debuginfo = "unpacked"
